--- a/i_talks.html
+++ b/i_talks.html
@@ -49,7 +49,12 @@
 <h1> Future Talks</h1>
 
 <p>
-7th International School on Deep Learning (DeepLearn 2022 Autumn), Luleå, Sweden, October 17-21, 2022 (invited 4.5h mini-course on Federated Learning)
+<a href="https://irdta.eu/deeplearn/2022au/">7th International School on Deep Learning (DeepLearn 2022 Autumn)</a>, Luleå, Sweden, October 17-21, 2022 (invited 4.5h mini-course on Federated Learning)
+</p>
+
+<p>
+<a href="https://crossfl2022.github.io">CrossFL: Cross-Community Federated Learning: Algorithms, Systems and Co-designs</a>,
+  A workshop associated with the <a href="https://mlsys.org">MLSys</a> conference, Santa Clara, USA, September 1, 2022 (keynote)
 </p>
 
 <p>
@@ -88,9 +93,10 @@ PhD Course "Introduction to Stochastic Gradient Descent" (18 hrs), Vienna Gradua
 <p> Workshop on Stochastic Numerics, Statistical Learning, Optimization, Approximations, with Applications. KAUST, Saudi Arabia, May 15-28, 2022 (invited)
 </p>
 
-<p> Spring School, <a href="https://ai-dd.eu">Advanced machine learning for Innovative Drug Discovery (AIDD)</a>,
+<!--- <p> Spring School, <a href="https://ai-dd.eu">Advanced machine learning for Innovative Drug Discovery (AIDD)</a>,
 Università della Svizzera italiana, Lugano, Switzerland, May 9, 2022 (invited lecture)
 </p>
+--->
 
 <p>
 Lagrange Workshop on Federated Learning, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April 25, 2022 (invited)
@@ -101,22 +107,27 @@ talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, M
 <a href="https://web.cvent.com/event/80bd6440-6758-4bd2-a612-214f7fe04252/summary?rt=570L8DJEKUSneITWTFOAWw">Apple's Workshop on Privacy Preserving Machine Learning</a>, April 5-6, 2022 (invited)
 </p>
 
-<p>
-<a href="https://cemse.kaust.edu.sa/events/event/proxskip-yes-local-gradient-steps-provably-lead-communication-acceleration-finally">AMCS/STAT Graduate Seminar</a>, KAUST, March 31, 2022 (invited)
-</p>
-
-
-
 
 
 <h1>2022 Talks</h1>
 
 <p>
-[195] <a href="https://cemse.kaust.edu.sa/events/event/permutation-compressors-provably-faster-distributed-nonconvex-optimization">Computer Science Graduate Seminar</a>, KAUST, March 21, 2022 (invited)
+[198] <a href="https://cemse.kaust.edu.sa/events/event/proxskip-yes-local-gradient-steps-provably-lead-communication-acceleration-finally">AMCS/STAT Graduate Seminar</a>, KAUST, March 31, 2022 (invited)
 </p>
 
 <p>
-[194] Dagstuhl Seminar, 3 talks, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
+[197] <a href="https://cemse.kaust.edu.sa/events/event/permutation-compressors-provably-faster-distributed-nonconvex-optimization">Computer Science Graduate Seminar</a>, KAUST, March 21, 2022 (invited)
+</p>
+
+<p>
+[196] Dagstuhl Seminar, Talk 3, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
+</p>
+<p>
+[195] Dagstuhl Seminar, Talk 2, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
+</p>
+
+<p>
+[194] Dagstuhl Seminar, Talk 1, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
 </p>
 
 <p>
