--- a/i_team.html
+++ b/i_team.html
@@ -55,9 +55,6 @@
           <h2>Research Scientists </h2>
 
           <ul>
-            <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2020-present), KAUST
-              <a href="https://scholar.google.com/citations?hl=en&user=uAFPPigAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
 
             <li><a href="https://lcondat.github.io">Laurent Condat</a> (11/2019-present), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=mfBA5f8AAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
@@ -147,9 +144,6 @@
               <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
-            <li><a href="https://scholar.google.com/citations?user=BFCHfngAAAAJ&hl=en">Navish Kumar</a> (IIT Kharagpur), 11/2021-5/2022
-              <a href="https://scholar.google.com/citations?hl=en&user=BFCHfngAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
           </ul>
 
 
@@ -164,8 +158,12 @@
           <h2>Research Scientists </h2>
 
 
-
           <ul>
+            <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2020-3/2022), KAUST
+              <a href="https://scholar.google.com/citations?hl=en&user=uAFPPigAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+              <br> <i>current position: Research Scientist, Carnegie Mellon University, USA </i>
+            </li>
+
             <li><a href="https://www.um6p.ma/index.php/en/node/6702">El Houcine Bergou</a> (2/2020-12/2020), KAUST
               <a href="https://scholar.google.com/citations?user=qzxprWoAAAAJ&hl=en"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
               <br> <i>current position: Assistant Professor, Mohammed VI Polytechnic University, Morocco </i> </li>
@@ -401,6 +399,9 @@
           <h2> Research Interns</h2>
 
           <ul>
+            <li><a href="https://scholar.google.com/citations?user=BFCHfngAAAAJ&hl=en">Navish Kumar</a> (IIT Kharagpur), 11/2021-3/2022
+              <a href="https://scholar.google.com/citations?hl=en&user=BFCHfngAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+            </li>
             <li><a href="https://www.linkedin.com/in/rafał-szlendak-552936220">Rafał Szlendak</a> (University of Warwick), 7/2021-10/2021 </li>
             <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 7/2021-11/2021 </li>
             <li><a href="https://scholar.google.com/citations?hl=en&user=H9GqvAYAAAAJ&view_op=list_works&sortby=pubdate">Bokun Wang</a> (University of California, Davis), 5/2020-8/2021</li>
