--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
         <div id="content">
 
 
+<h3>March 31, 2022</h3>
+
+<h1>Talk on ProxSkip at the AMCS/STAT Graduate Seminar at KAUST</h1>
+
+Today I have a talk about "ProxSkip: Yes! Local Gradient Steps Provably Lead to Communication Acceleration! Finally!"
+at the <a href="https://cemse.kaust.edu.sa/events/event/proxskip-yes-local-gradient-steps-provably-lead-communication-acceleration-finally">AMCS/STAT Graduate Seminar</a> here at KAUST. The talk is based on a
+joint paper with <a href="https://konstmish.github.io">Konstantin Mishchenko</a>,  <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> and <a href="https://sstich.ch">Sebastian Stich</a>.
+I will give the same talk at the <a href="https://sites.google.com/view/one-world-seminar-series-flow/future-talks">Federated Learning One World (FLOW) seminar</a> on May 4, 2022.
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>March 24, 2022</h3>
 
 <h1>Transactions on Machine Learning Research Accepting Submissions!</h1>
@@ -76,7 +95,7 @@ I have high hopes that TMLR will combine the benefits of a fast conference-like 
 
 <h1>Talk on PermK at the CS Graduate Seminar at KAUST</h1>
 
-Today I have a talk about "Permutation compressors for provably faster distributed nonconvex optimization"
+Today I gave a talk about "Permutation compressors for provably faster distributed nonconvex optimization"
 at the <a href="https://cemse.kaust.edu.sa/events/event/permutation-compressors-provably-faster-distributed-nonconvex-optimization">Computer Science Graduate Seminar</a> here at KAUST. The talk is based on
 joint paper with <a href="https://www.linkedin.com/in/rafał-szlendak-552936220">Rafał Szlendak</a> and <a href="https://k3nfalt.github.io/">Alexander Tyurin</a> recently accepted to <a href="https://iclr.cc">ICLR 2022</a>. I gave the same talk at the Federated Learning One World (FLOW) seminar in February; this one was recorded and is on <a href="https://www.youtube.com/watch?v=aMEj2pkGrcY">YouTube</a>.
 
