--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
         <div id="content">
 
 
+
+
+<h3>April 3, 2022</h3>
+
+<h1>Positions in my Optimization and Machine Learning Lab</h1>
+
+I always have openings for outstanding individuals to join my team as interns, MS/PhD students, PhD students, postdocs and research scientists.
+If you are interested in a position, please fill out this <a href="https://apply.interfolio.com/105097">interfolio application form</a>.
+
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>March 31, 2022</h3>
 
 <h1>Talk on ProxSkip at the AMCS/STAT Graduate Seminar at KAUST</h1>
