--- a/i_events.html
+++ b/i_events.html
@@ -193,8 +193,13 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 </li>
 
 
+<li><b><a href="https://www.kaust.edu.sa/aiworkshop/index.html">KAUST-Tsinghua-Industry workshop on AI</a></b>, KAUST, November 23-26, 2019
 
+  <ul>
+      <li> Local Coorganizer </li>
+  </ul>
 
+</li>
 
 <li><b><a href="https://ijcai19.org">IJCAI 2019</a></b>, Macao, China, August 10-16, 2019
 
