--- a/i_talks.html
+++ b/i_talks.html
@@ -103,39 +103,41 @@ Lagrange Workshop on Federated Learning, <a href="https://www.lmcrc.fr/#/meeting
 talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, Martin Jaggi, Peter Kairouz
 </p>
 
-<p>
-<a href="https://web.cvent.com/event/80bd6440-6758-4bd2-a612-214f7fe04252/summary?rt=570L8DJEKUSneITWTFOAWw">Apple's Workshop on Privacy Preserving Machine Learning</a>, April 5-6, 2022 (invited)
-</p>
-
 
 
 <h1>2022 Talks</h1>
 
 <p>
-[198] <a href="https://cemse.kaust.edu.sa/events/event/proxskip-yes-local-gradient-steps-provably-lead-communication-acceleration-finally">AMCS/STAT Graduate Seminar</a>, KAUST, March 31, 2022 (invited)
+[200]
+<a href="https://web.cvent.com/event/80bd6440-6758-4bd2-a612-214f7fe04252/summary?rt=570L8DJEKUSneITWTFOAWw">Apple's Workshop on Privacy Preserving Machine Learning</a>, April 5-6, 2022 (invited)
 </p>
 
 <p>
-[197] <a href="https://cemse.kaust.edu.sa/events/event/permutation-compressors-provably-faster-distributed-nonconvex-optimization">Computer Science Graduate Seminar</a>, KAUST, March 21, 2022 (invited)
+[199] <a href="https://cemse.kaust.edu.sa/events/event/proxskip-yes-local-gradient-steps-provably-lead-communication-acceleration-finally">AMCS/STAT Graduate Seminar</a>, KAUST, March 31, 2022 (invited)
 </p>
 
 <p>
-[196] Dagstuhl Seminar, Talk 3, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
-</p>
-<p>
-[195] Dagstuhl Seminar, Talk 2, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
+[198] <a href="https://cemse.kaust.edu.sa/events/event/permutation-compressors-provably-faster-distributed-nonconvex-optimization">Computer Science Graduate Seminar</a>, KAUST, March 21, 2022 (invited)
 </p>
 
 <p>
-[194] Dagstuhl Seminar, Talk 1, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
+[197] Dagstuhl Seminar, Talk 3, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
 </p>
 
 <p>
-[193] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar</a>, Virtual Seminar Series, February 9, 2022
+[196] Dagstuhl Seminar, Talk 2, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
 </p>
 
 <p>
-[192] <a href="https://congreso.us.es/mlneedsmo/">Machine Learning NeEDS Mathematical Optimization</a>, Virtual Seminar Series, February 7, 2022 (invited)
+[195] Dagstuhl Seminar, Talk 1, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
+</p>
+
+<p>
+[194] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar</a>, Virtual Seminar Series, February 9, 2022
+</p>
+
+<p>
+[193] <a href="https://congreso.us.es/mlneedsmo/">Machine Learning NeEDS Mathematical Optimization</a>, Virtual Seminar Series, February 7, 2022 (invited)
 </p>
 
 
@@ -144,86 +146,86 @@ talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, M
 <h1>2021 Talks</h1>
 
 <p>
-[191] <a href="https://neurips2021workshopfl.github.io/NFFL-2021/">NeurIPS 2021 Workshop: "New Frontiers in Federated Learning:
+[192] <a href="https://neurips2021workshopfl.github.io/NFFL-2021/">NeurIPS 2021 Workshop: "New Frontiers in Federated Learning:
 Privacy, Fairness, Robustness, Personalization and Data Ownership"</a>, virtual, December 13, 2021 (plenary)
 </p>
 
 <p>
-[190] <a href="https://nips.cc/virtual/2021/calendar">NeurIPS 2021 Oral Talk</a> on the <a href="https://arxiv.org/abs/2106.05203">EF21 paper</a>, virtual, December 7, 2021 (oral talk; less than 1% acceptance rate)
+[191] <a href="https://nips.cc/virtual/2021/calendar">NeurIPS 2021 Oral Talk</a> on the <a href="https://arxiv.org/abs/2106.05203">EF21 paper</a>, virtual, December 7, 2021 (oral talk; less than 1% acceptance rate)
 </p>
 
 <p>
-[189] </a href="https://www.kaust.edu.sa/en">KAUST</a>-<a href="http://ai.ruc.edu.cn/english/index.htm">GSAI</a> Joint Workshop on Advances in AI, virtual, November 25, 2021 (invited)
+[190] </a href="https://www.kaust.edu.sa/en">KAUST</a>-<a href="http://ai.ruc.edu.cn/english/index.htm">GSAI</a> Joint Workshop on Advances in AI, virtual, November 25, 2021 (invited)
 </p>
 
 <p>
-[188] <a href="https://www.cs.ut.ee/en/industry-collaboration/data-science-seminars">Data Science Seminar</a>, University of Tartu, Estonia, November 18, 2021 (invited) [<a href="https://youtu.be/WwnRMLxG0gs">video</a>]
+[189] <a href="https://www.cs.ut.ee/en/industry-collaboration/data-science-seminars">Data Science Seminar</a>, University of Tartu, Estonia, November 18, 2021 (invited) [<a href="https://youtu.be/WwnRMLxG0gs">video</a>]
 </p>
 
 <p>
-[187] SMAP Colloquium, University of Portsmouth, November 10, 2021 (invited)
+[188] SMAP Colloquium, University of Portsmouth, November 10, 2021 (invited)
 </p>
 
 <p>
-[186] Google Federated Learning and Analytics Workshop, November 8-10, 2021 (invited)
+[187] Google Federated Learning and Analytics Workshop, November 8-10, 2021 (invited)
 </p>
 
 <p>
-[185] <a href="https://cemse.kaust.edu.sa/events/event/ef21-new-simpler-theoretically-better-and-practically-faster-error-feedback">Computer Science Graduate Seminar</a>, KAUST, November 1, 2021 (invited)
+[186] <a href="https://cemse.kaust.edu.sa/events/event/ef21-new-simpler-theoretically-better-and-practically-faster-error-feedback">Computer Science Graduate Seminar</a>, KAUST, November 1, 2021 (invited)
 </p>
 
 <p>
-[184]  Research Seminar, <a href="https://kinit.sk">Kempelen Institute for Intelligent Technologies</a>, Slovakia, October 25, 2021
+[185] Research Seminar, <a href="https://kinit.sk">Kempelen Institute for Intelligent Technologies</a>, Slovakia, October 25, 2021
 </p>
 
 <p>
-[183]  <a href="https://fmph.uniba.sk/detail-novinky/back_to_page/fakulta-matematiky-fyziky-a-informatiky-uk/article/seminar-zo-strojoveho-ucenia-peter-richtarik-22102021/">Machine Learning Research Seminar</a>, Faculty of Mathematics, Physics and Informatics, Comenius University, Slovakia, October 22, 2021
+[184]  <a href="https://fmph.uniba.sk/detail-novinky/back_to_page/fakulta-matematiky-fyziky-a-informatiky-uk/article/seminar-zo-strojoveho-ucenia-peter-richtarik-22102021/">Machine Learning Research Seminar</a>, Faculty of Mathematics, Physics and Informatics, Comenius University, Slovakia, October 22, 2021
 </p>
 
 <p>
-[182] <a href="https://sites.google.com/view/one-world-seminar-series-flow/archive/2021#h.m3gei59g1ubv">Federated Learning One World Seminar</a>, virtual, July 28, 2021
+[183] <a href="https://sites.google.com/view/one-world-seminar-series-flow/archive/2021#h.m3gei59g1ubv">Federated Learning One World Seminar</a>, virtual, July 28, 2021
 </p>
 
 <p>
-[181]  <a href="http://federated-learning.org/fl-icml-2021/">International Workshop on Federated Learning for User Privacy and Data Confidentiality
+[182]  <a href="http://federated-learning.org/fl-icml-2021/">International Workshop on Federated Learning for User Privacy and Data Confidentiality
 in Conjunction with ICML 2021 (FL-ICML'21)</a>, virtual, July 24, 2021 (co-organizer and speaker)
 </p>
 
 <p>
-[180] <a href="https://www.siam.org/conferences/cm/conference/op21"> SIAM Conference on Optimization</a>, virtual, July 20-23, 2021 (invited)
+[181] <a href="https://www.siam.org/conferences/cm/conference/op21"> SIAM Conference on Optimization</a>, virtual, July 20-23, 2021 (invited)
 </p>
 
 <p>
-[179] <a href="https://cs.hse.ru/hdilab/opti/"> Optimization Without Borders </a> (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
+[180] <a href="https://cs.hse.ru/hdilab/opti/"> Optimization Without Borders </a> (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
 </p>
 
 <p>
-[178] Talk 2 (TBA)  <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>, KAUST, Thuwal, Saudi Arabia,  April 29, 2021
+[179] Talk 2, <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>, KAUST, Thuwal, Saudi Arabia,  April 29, 2021
 </p>
 
 <p>
-[177] Talk 1 (TBA)  <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>, KAUST, Thuwal, Saudi Arabia,  April 28, 2021
+[178] Talk 1,  <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>, KAUST, Thuwal, Saudi Arabia,  April 28, 2021
 </p>
 
 
 <p>
-[176] "Optimization for Machine Learning", <a href="https://ima.org.uk/14347/14347/">3rd Mathematics of Operational Research conference</a>, Aston University, Birmingham (UK),  April 22-23, 2021
+[177] "Optimization for Machine Learning", <a href="https://ima.org.uk/14347/14347/">3rd Mathematics of Operational Research conference</a>, Aston University, Birmingham (UK),  April 22-23, 2021
 </p>
 
 <p>
-[175] AMCS/STAT Graduate Seminar, KAUST, April 22, 2021 (invited)
+[176] AMCS/STAT Graduate Seminar, KAUST, April 22, 2021 (invited)
 </p>
 
 <p>
-[174] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar</a>, virtual, April 14, 2021
+[175] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar</a>, virtual, April 14, 2021
 </p>
 
 <p>
-[173] <a href="http://www.mathnet.ru/php/conference.phtml?&eventID=31&confid=1794&option_lang=eng">All Russian Seminar on Optimization</a>, virtual, April 7, 2021 (invited)
+[174] <a href="http://www.mathnet.ru/php/conference.phtml?&eventID=31&confid=1794&option_lang=eng">All Russian Seminar on Optimization</a>, virtual, April 7, 2021 (invited)
 </p>
 
 <p>
-[172] Research Seminar, <a href="https://mbzuai.ac.ae">MBZUAI</a>, Abu Dhabi, Febraury 16, 2021 (invited)
+[173] Research Seminar, <a href="https://mbzuai.ac.ae">MBZUAI</a>, Abu Dhabi, Febraury 16, 2021 (invited)
 </p>
 
 
@@ -231,35 +233,35 @@ in Conjunction with ICML 2021 (FL-ICML'21)</a>, virtual, July 24, 2021 (co-organ
 <h1>2020 Talks</h1>
 
 <p>
-[171] Apple's Workshop on Privacy Preserving Machine Learning, August 25-26, 2020 (invited)
+[172] Apple's Workshop on Privacy Preserving Machine Learning, August 25-26, 2020 (invited)
 </p>
 
 <p>
-[170]
+[171]
 Talk "Fast Linear Convergence of Randomized BFGS" @
 <a href="https://icml.cc">ICML 2020</a> <a href="https://sites.google.com/view/optml-icml2020">Workshop: "Beyond First Order Methods in ML Systems"</a>, Vienna, Austria, July  2020 (plenary). [<a href="talks/TALK-2020-07-RBFGS-ICML-workshop.pdf">slides</a>]</p>
 
 <p>
-[169]
+[170]
 Talk "On Second Order Methods and Randomness" @
 <a href="https://maths-of-data.github.io">Mathematics of Data Science</a>, Virtual Conference, June 11-12, 2020 (plenary speaker)
 </p>
 
 <p>
-[168]
+[169]
 Talk "On Second Order Methods and Randomness" @
 <a href="https://mtl-mlopt.github.io">Montréal Machine Learning and Optimization (MTL MLOpt) Seminar</a>,   via Google Meet, May 8, 2020 (invited) <br>
 <a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">  <img src="imgs/youtube.png" alt="YouTube" border="0" height="15px"></a>
 </p>
 
 <p>
-[167]
+[168]
 Talk "On Second Order Methods and Randomness" @ One World Optimization Seminar, April 27, 2020 (invited) <br>
  <a href="https://www.youtube.com/watch?v=HGQkct3db-c">  <img src="imgs/youtube.png" alt="YouTube" border="0" height="15px"></a>
  </p>
 
 <p>
-[166]
+[167]
 2 Research Talks at <a href="https://www.eset.com/us/">ESET</a>, Bratislava, Slovakia, January 7, 2020 (invited)
 </p>
 
@@ -269,8 +271,13 @@ Talk "On Second Order Methods and Randomness" @ One World Optimization Seminar, 
 
 
 <p>
-[165]
+[166]
 <a href="https://nips.cc/Conferences/2019">NeurIPS 2019</a>, Vancouver, Canada, December 9-13, 2019
+</p>
+
+<p>
+[165]
+<a href="https://www.kaust.edu.sa/aiworkshop/index.html">KAUST-Tsinghua-Industry workshop on AI</a>, KAUST, December 23-26, 2019 (invited)
 </p>
 
 <p>[164] "Distributed and Federated Learning", Huawei, Nizhny
