--- a/i_team.html
+++ b/i_team.html
@@ -43,10 +43,10 @@
       </ul>
       <div id="wrapper" class="main">
 
-        <div id="content"> I am very fortunate to be able to work with a
-          team of amazing and very talented people. If you want to join
-          my group, read the instructions <a href="i_join.html">here.</a><br>
-          <br>
+        <div id="content">
+
+          I am very fortunate to be able to work with a team of amazing and very talented people. If you want to join my group as an intern, MS/PhD student, PhD student, postdoc or a research scientist,  read the instructions <a href="i_join.html">here</a> and <a href="https://apply.interfolio.com/105097">fill out 
+          this interfolio form.</a><br>  <br>
 
           <h1>Optimization and Machine Learning Lab: Current Members</h1>
 
@@ -140,9 +140,17 @@
             <li>Kaja Gruntkowska (University of Warwick), 7/2022-9/2022</li>
             <li><a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">Arto Maranjyan</a> (Yerevan State University), 6/2022-11/2022</li>
           -->
-            <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (Moscow Institute of Physics and Technology), 2/2022-7/2022
-              <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
+            <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (2/2022-present), KAUST <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a><br>
+            <i>current position: MS student, Moscow Institute of Physics and Technology, Russia</i></li>
+
+          </ul>
+
+
+          <h2>Visitors</h2>
+
+          <ul>
+            <li><a href="http://sstich.ch">Eduard Gorbunov</a> (03/2022-present), KAUST <a href="https://scholar.google.com/citations?user=85j2RqQAAAAJ&hl=en"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a><br>
+            <i>current position: postdoc, MILA, Canada</i></li>
 
           </ul>
 
@@ -181,11 +189,11 @@
 
             <li><a href="https://fhanzely.github.io">Filip Hanzely</a> (8/2020-11/2020), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=_X0AKjEAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-              <br> <i>current position: Research Assistant Professor, TTIC, Chicago, USA</i> </li>
+              <br> <i>current position: Research Scientist, Wincent, Bratislava, Slovakia</i> </li>
 
             <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-9/2020), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=uAFPPigAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-                <br> <i>current position: Research Scientist, KAUST, Thuwal, Saudi Arabia </i> </li>
+                <br> <i>current position: Research Scientist, Carnegie Mellon University, Pittsburgh, USA </i> </li>
 
             <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-10/2021), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=wFkXSlYAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
@@ -205,7 +213,7 @@
 
             <li><a href="https://gowerrobert.github.io/">Robert Mansel Gower</a> (3/2016-6/2016), University of Edinburgh
               <a href="https://scholar.google.com/citations?hl=en&user=okKw87MAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-                <br> <i>current position: Assistant Professor, Télécom ParisTech, Paris, France </i> </li>
+                <br> <i>current position: Research Scientist, The Flatiron Institute, New York, USA </i> </li>
 
             <li><a href="http://people.ufpr.br/%7Eademir.ribeiro/">Ademir Ribeiro</a> (10/2014-3/2015), University of Edinburgh
                 <br> <i>current position: Associate Professor, Federal University of Paraná, Brazil </i> </li>
@@ -399,7 +407,7 @@
           <h2> Research Interns</h2>
 
           <ul>
-            <li><a href="https://scholar.google.com/citations?user=BFCHfngAAAAJ&hl=en">Navish Kumar</a> (IIT Kharagpur), 11/2021-3/2022
+            <li><a href="https://scholar.google.com/citations?user=BFCHfngAAAAJ&hl=en">Navish Kumar</a> (IIT Kharagpur), 11/2021-2/2022
               <a href="https://scholar.google.com/citations?hl=en&user=BFCHfngAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
             <li><a href="https://www.linkedin.com/in/rafał-szlendak-552936220">Rafał Szlendak</a> (University of Warwick), 7/2021-10/2021 </li>
