--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ I will give the same talk at the <a href="https://sites.google.com/view/one-worl
 <h1>Transactions on Machine Learning Research Accepting Submissions!</h1>
 
 <a href="https://jmlr.org/tmlr/index.html">Transactions on Machine Learning Research</a> is a new venue for the dissemination of
-machine learning research. Your truly is one of a large number (approx 150) of <a href="https://jmlr.org/tmlr/editorial-board.html">Action
+machine learning research. Yours truly is one of a large number (approx 150) of <a href="https://jmlr.org/tmlr/editorial-board.html">Action
   Editors</a>. You can read <a href="https://jmlr.org/tmlr/ae-guide.html">here</a> in detail what
 the responsibilities of an Action Editor are. We are delighted to let you know that TMLR is now <a href="https://jmlr.org/tmlr/news/2022/launch.html">accepting submissions!</a>
 <br> <br>
