--- a/i_talks.html
+++ b/i_talks.html
@@ -99,6 +99,16 @@ Università della Svizzera italiana, Lugano, Switzerland, May 9, 2022 (invited l
 --->
 
 <p>
+Seminar Series in Cognitive Computing at Baidu Research, virtual, April 26, 2022 @ 10pm PT = April 27, 2022 @ 7am CET;
+Previous speakers: <a href="https://www.youtube.com/watch?v=BjCwYDl8UB4&t=9s">Larry Carin</a>,
+<a href="https://www.youtube.com/watch?v=6x_vIJRHglY&t=930s">Pascal Fua</a>,
+<a href="https://www.youtube.com/watch?v=DokLw1tILlw&t=456s">Yann LeCun</a> (<a href="https://www.youtube.com/watch?v=Qgh2IU_fRMs&t=2118s">Q&A</a>),
+<a href="https://www.youtube.com/watch?v=5Tdndu275AY&t=2s">Sergey Levine</a>,
+<a href="https://www.youtube.com/watch?v=2SnComaWLtQ&t=3s">Max Welling</a>,
+<a href="https://www.youtube.com/watch?v=_12g9kpL4K8&t=3387s">Eric Xing</a>  (invited by Ping Li)
+</p>
+
+<p>
 Lagrange Workshop on Federated Learning, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April 25, 2022 (invited)
 talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, Martin Jaggi, Peter Kairouz
 </p>
