--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
         <div id="content">
 
 
+<h3>April 7, 2022</h3>
+
+<h1>Apple Workshop on Privacy Preserving Machine Learning</h1>
+
+On Tuesday and Wednesday earlier this week I attended and gave a talk at (an invite-only) workshop on "Privacy Preserving Machine Learning" organized by Apple.
+The program started at 7pm my time (morning California time) and lasted until after midnight. Yes, I felt very very tired near the end...
+In any case, a nice event.
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 
 <h3>April 3, 2022</h3>
