--- a/i_talks.html
+++ b/i_talks.html
@@ -139,7 +139,7 @@ talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, M
 </p>
 
 <p>
-[195] Dagstuhl Seminar, Talk 1, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
+[195] Dagstuhl Seminar, Talk 1, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022 (invited)
 </p>
 
 <p>
