--- a/i_team.html
+++ b/i_team.html
@@ -135,13 +135,13 @@
           <h2>Research Interns</h2>
 
           <ul>
-            <!--
-            <li><a href="https://www.linkedin.com/in/michał-grudzień-2141a2198/?originalSubdomain=uk">Michał Grudzień</a> (University of Oxford), 7/2022-10/2022</li>
-            <li>Kaja Gruntkowska (University of Warwick), 7/2022-9/2022</li>
-            <li><a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">Arto Maranjyan</a> (Yerevan State University), 6/2022-11/2022</li>
-          -->
-            <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (2/2022-present), KAUST <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a><br>
-            <i>current position: MS student, Moscow Institute of Physics and Technology, Russia</i></li>
+
+
+            <li><a href="https://www.linkedin.com/in/michał-grudzień-2141a2198/?originalSubdomain=uk">Michał Grudzień</a> (7/2022-10/2022), from University of Oxford </li>
+            <li>Kaja Gruntkowska (7/2022-9/2022), from University of Warwick </li>
+            <li><a href="https://www.researchgate.net/profile/Wenzhi-Fang">Wenzhi (Tom) Fang</a> (6/2022-12/2022), from ShanghaiTech University </li>
+            <li><a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">Arto Maranjyan</a> (6/2022-11/2022), from Yerevan State University </li>
+            <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (2/2022-present), from MIPT <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a></li>
 
           </ul>
 
