--- a/i_talks.html
+++ b/i_talks.html
@@ -49,6 +49,14 @@
 <h1> Future Talks</h1>
 
 <p>
+Introduction to Machine Learning 2/2, Aramco, November 17-20, 2022
+</p>
+
+<p>
+Introduction to Machine Learning 1/2, Aramco, November 3-6, 2022
+</p>
+
+<p>
 <a href="https://irdta.eu/deeplearn/2022au/">7th International School on Deep Learning (DeepLearn 2022 Autumn)</a>, Luleå, Sweden, October 17-21, 2022 (invited 4.5h mini-course on Federated Learning)
 </p>
 
