--- a/i_events.html
+++ b/i_events.html
@@ -53,12 +53,21 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 <ol reversed>
 
   <li><a href="https://nips.cc/Conferences/FutureMeetings"><b>NeurIPS 2022</b></a>, New Orleans, USA, November 26 - December 4, 2022
-
   <ul>
     <li> Area Chair </li>
   </ul>
+  </li>
+
+
+  <li><a href="https://fededge2022.github.io"><b>MobiCom'22 FedEdge Workshop (ACM Workshop on Data Privacy and
+Federated Learning Technologies for Mobile Edge Network - Research Track)</b></a>, Sydney, Australia, October 24, 2022
+
+  <ul>
+    <li> Program Committee Member </li>
+  </ul>
 
   </li>
+
 
   <li><a href="https://icml.cc/"><b>ICML 2022</b></a>, Physical Coference, July 17-23, 2022
 
