--- a/i_talks.html
+++ b/i_talks.html
@@ -49,6 +49,11 @@
 <h1> Future Talks</h1>
 
 <p>
+<a href="https://ims.nus.edu.sg/events/optimization-in-the-big-data-era/">Optimization in the Big Data Era</a>, Institute
+for Mathematical Sciences, National University of Singapore, Singapore, November 21 - December 9, 2022 (invited)
+</p>
+
+<p>
 Introduction to Machine Learning 2/2, Aramco, November 17-20, 2022
 </p>
 
@@ -63,11 +68,6 @@ Introduction to Machine Learning 1/2, Aramco, November 3-6, 2022
 <p>
 <a href="https://crossfl2022.github.io">CrossFL: Cross-Community Federated Learning: Algorithms, Systems and Co-designs</a>,
   A workshop associated with the <a href="https://mlsys.org">MLSys</a> conference, Santa Clara, USA, September 1, 2022 (keynote)
-</p>
-
-<p>
-<a href="https://ims.nus.edu.sg/events/2020/opt/index.php">Fast Optimization Algorithms in the Big Data Era</a>, Institute
-of Mathematical Sciences, National University of Singapore, Singapore, August 1-26, 2022 (invited)
 </p>
 
 <p>
