Lagrange workshop on FL

--- a/i_team.html
+++ b/i_team.html
@@ -149,7 +149,7 @@
           <h2>Visitors</h2>
 
           <ul>
-            <li><a href="http://sstich.ch">Eduard Gorbunov</a> (03/2022-present), KAUST <a href="https://scholar.google.com/citations?user=85j2RqQAAAAJ&hl=en"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a><br>
+            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (03/2022-present), KAUST <a href="https://scholar.google.com/citations?user=85j2RqQAAAAJ&hl=en"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a><br>
             <i>current position: postdoc, MILA, Canada</i></li>
 
           </ul>
