--- a/index.html
+++ b/index.html
@@ -44,6 +44,35 @@
         <div id="content">
 
 
+
+<h3>April 25, 2022</h3>
+
+<h1>Lagrange Workshop on Federated Learning</h1>
+
+Today I am giving a talk at the Lagrange Workshop on Federated Learning, organized by Eric Moulines, Merouane Debbah and Samson Lasaulce as a
+"Lagrange Mathematics and Computing Research Center" event. I am looking forward to listening to many interesting talks, including one
+by my former student <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>.
+
+<br>
+<br>
+<a href="imgs/WS-FL_FLyer.pdf"><img alt="" src="imgs/WS-FL_FLyer.png" width="750"></a>
+<br>
+<br>
+
+It's a virtual meeting, anyone can join via Zoom.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+
 <h3>April 7, 2022</h3>
 
 <h1>Apple Workshop on Privacy Preserving Machine Learning</h1>
