--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 <h1>Lagrange Workshop on Federated Learning</h1>
 
 Today I am giving a talk at the Lagrange Workshop on Federated Learning, organized by Eric Moulines, Merouane Debbah and Samson Lasaulce as a
-"Lagrange Mathematics and Computing Research Center" event. I am looking forward to listening to many interesting talks, including one
-by my former student <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>.
+"Lagrange Mathematics and Computing Research Center" event.
 
 <br>
 <br>
@@ -59,7 +58,8 @@ by my former student <a href="https://eduardgorbunov.github.io">Eduard Gorbunov<
 <br>
 <br>
 
-It's a virtual meeting, anyone can join via Zoom.
+It's a virtual meeting, anyone can join via Zoom. I am looking forward to listening to many interesting talks, including one
+by my former student <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>.
 <br>
 
 
