--- a/i_papers.html
+++ b/i_papers.html
@@ -133,7 +133,7 @@
           <b>Permutation compressors for provably faster distributed nonconvex optimization</b><br>
           10th International Conference on Learning Representations (ICLR 2022)  <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2110.03300">arXiv</a>] [code: MARINA] [<a href="https://recorder-v3.slideslive.com/?share=64408&s=28e788a7-dbab-47c8-b882-f2381c5d7689">video</a>] <br>
+          [<a href="https://arxiv.org/abs/2110.03300">arXiv</a>] [code: MARINA] [<a href="https://www.youtube.com/watch?v=aMEj2pkGrcY">video</a>] <br>
           <br>
 
           [173] Ilyas Fatkhullin, Igor Sokolov, Eduard Gorbunov, Zhize Li and Peter Richtárik<br>
