--- a/i_papers.html
+++ b/i_papers.html
@@ -56,7 +56,7 @@
           [186] Konstantin Mishchenko, Grigory Malinovsky, Sebastian Stich and Peter Richtárik<br>
           <b>ProxSkip: Yes! Local Gradient Steps Provably Lead to Communication Acceleration! Finally!</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2202.09357">arXiv</a>] [code: ProxSkip, Scaffnew, SProxSkip, SplitSkip, Decentralized Scaffnew] <br>
+          [<a href="https://arxiv.org/abs/2202.09357">arXiv</a>] [<a href="https://richtarik.org/talks/2022-ProxSkip-Lagrange_Workshop.pdf">slides</a>] [code: ProxSkip, Scaffnew, SProxSkip, SplitSkip, Decentralized Scaffnew] <br>
           <br>
 
           [185] Dmitry Kovalev, Aleksandr Beznosikov, Abdurakhmon Sadiev, Michael Persiianov, Peter Richtárik and Alexander Gasnikov<br>
