--- a/index.html
+++ b/index.html
@@ -45,6 +45,29 @@
 
 
 
+
+
+<h3>April 27, 2022</h3>
+
+<h1>Two Seminar Talks: Baidu and PSU</h1>
+
+I gave two talks today on the ProxSkip method [<a href="https://arxiv.org/abs/2202.09357">paper</a>]; the first at the
+"Seminar Series in Cognitive Computing at Baidu Research", invited by <a href="https://www.linkedin.com/in/ping-li-a4624389/">Ping Li</a>
+[<a href="TALK-2022-04-ProxSkip-Baidu.pdf">my slides</a>], and the second at the "Department of
+Mathematics Colloqium, Penn State University", invited by
+<a href="https://www.personal.psu.edu/jxx1/">Jinchao Xu</a> [<a href="TALK-2022-04-ProxSkip-PSU.pdf">my slides</a>].
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>April 25, 2022</h3>
 
 <h1>Lagrange Workshop on Federated Learning</h1>
