--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 <h1>Two Seminar Talks: Baidu and PSU</h1>
 
-I gave two talks today on the ProxSkip method [<a href="https://arxiv.org/abs/2202.09357">paper</a>]; the first at the
+I gave two talks on the ProxSkip method [<a href="https://arxiv.org/abs/2202.09357">paper</a>] today: the first talk at the
 "Seminar Series in Cognitive Computing at Baidu Research", invited by <a href="https://www.linkedin.com/in/ping-li-a4624389/">Ping Li</a>
-[<a href="TALK-2022-04-ProxSkip-Baidu.pdf">my slides</a>], and the second at the "Department of
+[<a href="TALK-2022-04-ProxSkip-Baidu.pdf">my slides</a>], and the second talk at the "Department of
 Mathematics Colloqium, Penn State University", invited by
 <a href="https://www.personal.psu.edu/jxx1/">Jinchao Xu</a> [<a href="TALK-2022-04-ProxSkip-PSU.pdf">my slides</a>].
 <br>
@@ -72,8 +72,9 @@ Mathematics Colloqium, Penn State University", invited by
 
 <h1>Lagrange Workshop on Federated Learning</h1>
 
-Today I am giving a talk at the Lagrange Workshop on Federated Learning, organized by Eric Moulines, Merouane Debbah and Samson Lasaulce as a
-"Lagrange Mathematics and Computing Research Center" event.
+Today I am giving a talk entitled <a href="https://arxiv.org/abs/2202.09357">"ProxSkip: Yes! Local Gradient Steps Provably Lead to Communication Acceleration! Finally!"</a> at the Lagrange Workshop on Federated Learning, organized by Eric Moulines, Merouane Debbah and Samson Lasaulce as a
+"Lagrange Mathematics and Computing Research Center" event. The talk is based on this paper in which we resolve an important open problem in the field of federated learning. In particular, we show that local gradient steps can provably lead to
+communication acceleration.
 
 <br>
 <br>
@@ -81,7 +82,7 @@ Today I am giving a talk at the Lagrange Workshop on Federated Learning, organiz
 <br>
 <br>
 
-It's a virtual meeting, anyone can join via Zoom. I am looking forward to listening to many interesting talks, including one
+The workshop a virtual meeting; anyone can join via Zoom. I am looking forward to listening to many interesting talks, including one
 by my former student <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>.
 <br>
 
