--- a/i_talks.html
+++ b/i_talks.html
@@ -70,9 +70,11 @@ Introduction to Machine Learning 1/2, Aramco, November 3-6, 2022
   A workshop associated with the <a href="https://mlsys.org">MLSys</a> conference, Santa Clara, USA, September 1, 2022 (keynote)
 </p>
 
+<!---
 <p>
 <a href="https://iccopt2022.lehigh.edu">International Conference on Continuous Optimization (ICCOPT)</a>, Lehigh, USA, July 25-28, 2022 (invited)
 </p>
+--->
 
 <p>
 <a href="https://icml.cc/Conferences/2022">ICML 2022</a>, Baltimore, Maryland, USA, July 17-23, 2022
@@ -101,29 +103,37 @@ PhD Course "Introduction to Stochastic Gradient Descent" (18 hrs), Vienna Gradua
 <p> Workshop on Stochastic Numerics, Statistical Learning, Optimization, Approximations, with Applications. KAUST, Saudi Arabia, May 15-28, 2022 (invited)
 </p>
 
+<p> <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar (FLOW)</a>, Virtual seminar, May 4, 2022
+</p>
+
 <!--- <p> Spring School, <a href="https://ai-dd.eu">Advanced machine learning for Innovative Drug Discovery (AIDD)</a>,
 Università della Svizzera italiana, Lugano, Switzerland, May 9, 2022 (invited lecture)
 </p>
 --->
 
+
+
+
+
+<h1>2022 Talks</h1>
+
+<p> [203] Department of Mathematics Colloquium, Penn State University, USA, April 27, 2022 (invited)
+</p>
+
 <p>
-Seminar Series in Cognitive Computing at Baidu Research, virtual, April 26, 2022 @ 10pm PT = April 27, 2022 @ 7am CET;
+[202] Seminar Series in Cognitive Computing at Baidu Research, virtual, April 26, 2022 @ 10pm PT = April 27, 2022 @ 7am CET;
 Previous speakers: <a href="https://www.youtube.com/watch?v=BjCwYDl8UB4&t=9s">Larry Carin</a>,
 <a href="https://www.youtube.com/watch?v=6x_vIJRHglY&t=930s">Pascal Fua</a>,
 <a href="https://www.youtube.com/watch?v=DokLw1tILlw&t=456s">Yann LeCun</a> (<a href="https://www.youtube.com/watch?v=Qgh2IU_fRMs&t=2118s">Q&A</a>),
 <a href="https://www.youtube.com/watch?v=5Tdndu275AY&t=2s">Sergey Levine</a>,
 <a href="https://www.youtube.com/watch?v=2SnComaWLtQ&t=3s">Max Welling</a>,
-<a href="https://www.youtube.com/watch?v=_12g9kpL4K8&t=3387s">Eric Xing</a>  (invited by Ping Li)
+<a href="https://www.youtube.com/watch?v=_12g9kpL4K8&t=3387s">Eric Xing</a>  (invited)
 </p>
 
 <p>
-Lagrange Workshop on Federated Learning, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April 25, 2022 (invited)
+[201] Lagrange Workshop on Federated Learning, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April 25, 2022 (invited)
 talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, Martin Jaggi, Peter Kairouz
 </p>
-
-
-
-<h1>2022 Talks</h1>
 
 <p>
 [200]
